@@ -53,6 +53,8 @@ version_major := $(shell echo $(version_upstream) | cut -d'.' -f1,2)
 PKGVERSION = $(version_major)
 SOVERSION = $(version_upstream)
 
+icuabi = $(shell apt show libicu-dev 2>/dev/null | sed -n 's/Depends: .*libicu\([0-9]*\) .*/\1/p')
+regexicuabi = libboost-regex$(SOVERSION)-icu$(icuabi)
 
 # Function to map Boost component name to set of shared library names
 # Input: Boost component name
@@ -285,6 +287,8 @@ override_dh_install-arch: override_dh_install-common
 	echo 'boost:Provides=' $(foreach verid,$(pyverids),libboost-python$(SOVERSION)-py$(verid),) >> debian/libboost-python$(SOVERSION).substvars
 	echo 'boost:Provides=' $(foreach verid,$(pyverids),libboost-mpi-python$(SOVERSION)-py$(verid),) >> debian/libboost-mpi-python$(SOVERSION).substvars
 	echo 'boost:Provides=' $(foreach verid,$(pyverids),libboost-numpy$(SOVERSION)-py$(verid),) >> debian/libboost-numpy$(SOVERSION).substvars
+	# Write substvars for Regex (icu abi)
+	echo 'boost:Provides=$(regexicuabi)' >> debian/libboost-regex$(SOVERSION).substvars
 
 	# package libboost$(PKGVERSION)-dev
 	dh_install -plibboost$(PKGVERSION)-dev \
@@ -405,7 +409,7 @@ override_dh_strip:
 	dh_strip --dbgsym-migration='libboost1.55-dbg, libboost1.58-dbg, libboost1.61-dbg'
 
 override_dh_makeshlibs:
-	dh_makeshlibs -plibboost-regex1.67.0 -V 'libboost-regex1.67.0 (>= 1.67.0-10)'
+	dh_makeshlibs -plibboost-regex$(SOVERSION) -V '$(regexicuabi)'
 	dh_makeshlibs --remaining-packages
 
 $(bjam):
