@@ -2,6 +2,7 @@ boost1.67 (1.67.0-14) UNRELEASED; urgency=medium
 
   [ Dimitri John Ledkov ]
   * Remove myself from uploaders.
+  * Provide and Encode icuabi in libboost-regex shlibdeps.
 
   [ Giovanni Mascellani ]
   * Add -contract as dependency of -dev-all.
